[gd_scene load_steps=12 format=3]

[ext_resource type="FontFile" uid="uid://qgku7moi1efd" path="res://assets/fonts/scribbles.ttf" id="1"]
[ext_resource type="Script" path="res://global/loading_screen/loading_screen.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bay0tgp46sfbw" path="res://assets/textures/background_01.png" id="3"]
[ext_resource type="Texture2D" uid="uid://we0sue4i3r05" path="res://assets/textures/bar_fill.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bxf0efd2q4qmn" path="res://assets/textures/bar_border.png" id="5"]
[ext_resource type="Theme" uid="uid://cnq43lwu6wk48" path="res://assets/themes/main_menu_theme.tres" id="6"]


[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 256, 256 )
modulate_color = Color( 0.482353, 0.478431, 0.478431, 1 )

[sub_resource type="FontFile" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=3]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=4]
size = 15
font_data = ExtResource( 1 )

[node name="LoadingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 2 )
tips = [ "tumors produce rot over time. destroy them", "insert certain items in a processor to receive special material used in machines", "machines are used to create goods that are bought at the vendor", "get seeds from amoebas", "bones are the only way to leave the nightmare" ]

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
offset_right = 75.0
offset_bottom = 39.0

[node name="LoadingLabel" type="Label" parent="Control/VBoxContainer"]
offset_right = 75.0
offset_bottom = 22.0
theme_override_fonts/font = SubResource( 1 )
text = "Loading..."

[node name="LevelName" type="Label" parent="Control/VBoxContainer"]
offset_top = 26.0
offset_right = 75.0
offset_bottom = 39.0
theme_override_colors/font_color = Color( 1, 0, 0, 1 )
theme_override_fonts/font = SubResource( 2 )
text = "Level Name"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -19.5
offset_right = 320.0
offset_bottom = 67.5
clip_contents = true

[node name="TipLabel" type="Label" parent="Control/VBoxContainer2"]
offset_right = 320.0
offset_bottom = 22.0
theme_override_fonts/font = SubResource( 3 )
text = "Tip"

[node name="TipValue" type="Label" parent="Control/VBoxContainer2"]
offset_top = 26.0
offset_right = 320.0
offset_bottom = 39.0
theme_override_colors/font_color = Color( 1, 0, 0, 1 )
theme_override_fonts/font = SubResource( 4 )
text = "tip goes here"
autowrap = true

[node name="ProgressBar" type="TextureProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -137.5
offset_top = -40.0
offset_right = 137.5
offset_bottom = -15.0
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.164706, 0.164706, 0.164706, 1 )
tint_progress = Color( 0.596078, 0, 0, 1 )
nine_patch_stretch = true
